# streamlit-overlay

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
streamlit_heatmap/: MANIFEST.in  __init__.py  setup.py  utils.py
streamlit_heatmap/frontend/src/: App.tsx  Overlay.tsx  index.css
streamlit_overlay/: __init__.py  utils.py
streamlit_overlay/frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts
streamlit_overlay/frontend/src/: Overlay.tsx  index.tsx  utils.ts
streamlit_overlay/frontend/src/components/: VideoControls.tsx
